[package]
name = "media_file_converter"
version = "0.1.0"
edition = "2021"
authors = ["atcoder8"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
